# robocup-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  convert.py  makefile
doc/: Git.md
firmware/: .~lock.radio_timing.xls#  CMakeLists.txt
firmware/base2015/: main.cpp
firmware/common2015/: CMakeLists.txt
firmware/common2015/drivers/avr-isp/: AVR910.cpp  AVR910.hpp
firmware/common2015/drivers/decawave/: Decawave.cpp  Decawave.hpp
firmware/common2015/drivers/kicker-board/: KickerBoard.cpp  KickerBoard.hpp  kicker_commands.h
firmware/common2015/drivers/shared-spi/: SharedSPI.hpp
firmware/common2015/modules/CommModule/: CommModule.cpp  CommModule.hpp
firmware/robot2015/hw-test/: attiny-programmer-test.cpp  kicker-test.cpp
firmware/robot2015/src-ctrl/: CMakeLists.txt  main.cpp
firmware/robot2015/src-ctrl/modules/: ControllerTaskThread.cpp  RadioProtocol.hpp
firmware/robot2015/src-ctrl/modules/commands/: commands.cpp
firmware/robot2015/src-ctrl/modules/control/: PidMotionController.hpp  RobotModel.cpp  RobotModel.hpp
firmware/robot2015/src-kckr/: main.c  pins.h
firmware/zlib/: CMakeLists.txt  zconf.h
kicker/: CMakeLists.txt  main.c  main.c.save  pins.h
lib/: CMakeLists.txt
lib/drivers/avr-isp/: AVR910.cpp  AVR910.hpp
lib/drivers/decawave/: Decawave.cpp  Decawave.hpp
lib/drivers/decawave/decadriver/: deca_device.cpp
lib/drivers/ism43340/: ISM43340.cpp
lib/drivers/kicker-board/: KickerBoard.cpp
lib/drivers/mpu-6050/: I2Cdev.cpp
lib/modules/: CommLink.cpp  CommModule.cpp
lib/modules/include/: CommLink.hpp  CommModule.hpp
robot/: CMakeLists.txt  conanfile.py
robot/base/: main.cpp
robot/control/: CMakeLists.txt  main.cpp
robot/control/Inc/: iodefs.h
robot/control/Inc/modules/: IMUModule.hpp
robot/control/Src/modules/: FPGAModule.cpp  IMUModule.cpp  KickerModule.cpp  MotionControlModule.cpp  RadioModule.cpp
robot/control/Src/motion-control/: RobotController.cpp
robot/hw-test/: imu-test.cpp  imu.cpp  radio-test.cpp
robot/lib/: CMakeLists.txt
robot/lib/Inc/device-bins/: kicker_bin.h
robot/lib/Inc/drivers/: AVR910.hpp  ISM43340.hpp  LSM9DS1.hpp  kicker_bin.h
robot/lib/Inc/drivers/Internal/: kicker_bin.h
robot/lib/Src/drivers/: AVR910.cpp  ICM42605.cpp  ISM43340.cpp  KickerBoard.cpp  LSM9DS1.cpp
run/: rj-ctrl
src/base/: main.cpp
src/control/: main.cpp
src/control/modules/: CommInitialization.cpp  ConsoleTaskThread.cpp  ControllerTaskThread.cpp  RadioProtocol.cpp  RadioProtocol.hpp
src/control/modules/commands/: Commands.cpp
src/control/modules/configuration/: ConfigStore.cpp  ConfigStore.hpp
src/control/modules/control/: PidMotionController.hpp  RobotModel.hpp
src/fpga/proj/RoboJackets-RoboCup-FPGA.cache/wt/: gui_handlers.wdf
src/fpga/proj/RoboJackets-RoboCup-FPGA_Firmware.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf
src/hw-test/: test-all.cpp  test-base.cpp  test-motor.cpp  test-radio-debug.cpp  test-radio-file.cpp  test-radio-rx.cpp  test-radio-tx.cpp  test-test.cpp
src/kicker/: CMakeLists.txt  attiny_toolchain.cmake  kmacros.h  main.c  pins.h
src/kicker/hal/atmega32a/: sys.c  timing.c  wdt.c
src/kicker/hal/atmega32a/v3.0/: io.c
src/kicker/include/: pins.h
src/kicker/include/hal/: hal.h  sys.h  timing.h  wdt.h
src/kicker/include/hal/atmega32a/: platform.h
src/kicker/include/hal/atmega32a/v3.0/: io.h
util/: osx-packages.txt  osx-setup  ubuntu-packages.txt  ubuntu-setup
